# rules_proto_grpc_rust

pkg/rs/prost_any/: BUILD.bazel  lib.rs
pkg/rs/prost_any/protoc_gen_prost_any/: BUILD.bazel  generator.rs  main.rs
rules/proto/: BUILD.bazel  defs.bzl
rules/proto/connect_web/: BUILD.bazel  build_indexes.sh  connect_web_library.bzl
rules/proto/rust/: BUILD.bazel  fixer.bzl  fixer.sh  tonic_library.bzl
